Trying to fix MalformedURLException error.